Adding Spark-1.2.1 too